--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,34 @@
+########## Android ##########
+
 # built application files
+bin/
 *.apk
 *.ap_
 
 # files for the dex VM
 *.dex
 
-# Java class files
-*.class
-
 # generated files
-bin/
 gen/
 
 # Local configuration file (sdk path, etc)
 local.properties
+
+# Proguard Files
+proguard-project.txt
+
+# 
+ant.properties
+build.xml
+
+########## Intellij #########
+
+*.iml
+.idea/
+out/
+
+########## Eclipse ##########
+
+.classpath
+.project
+classes/
