--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,7 +3,10 @@
       package="com.example.andorid.apis.mifare"
       android:versionCode="1"
       android:versionName="1.0">
-    <uses-sdk android:minSdkVersion="10" />
+    
+     <uses-sdk
+        android:minSdkVersion="15"
+        android:targetSdkVersion="15" />
 
     <uses-permission android:name="android.permission.NFC" />
     <uses-permission android:name="android.permission.INTERNET" />
