--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="com.example.andorid.apis.mifare"
+      package="com.riocard.rcdroid"
       android:versionCode="1"
       android:versionName="1.0">
     
@@ -11,7 +11,7 @@
     <uses-permission android:name="android.permission.NFC" />
     <uses-permission android:name="android.permission.INTERNET" />
     
-    <application android:icon="@drawable/icon" android:label="">
+    <application android:icon="@drawable/ic_launcher" android:label="" android:theme="@style/AppTheme" >
         <activity android:name=".MainActivity"
                   android:label="@string/app_name" android:screenOrientation="portrait">
             <intent-filter>
